<resources>
    <string name="app_name">Parasitology Mobile Software</string>
    <string name="app_username">Nome Completo</string>
    <string name="app_email_address">Endereço de e-mail</string>
    <string name="app_password">Senha</string>
    <string name="app_confirm_password">Confirmar Senha</string>
    <string name="app_signup">Cadastrar-se</string>
    <string name="app_welcome">Bem Vindo!</string>
    <string name="app_data_to_start">Insira seus dados para começar</string>
    <string name="app_forgot_password">Esqueceu a senha?</string>
    <string name="app_new_account">Não possui uma conta?</string>
    <string name="app_school_year">Série Escolar:</string>
    <string name="app_skip">Pular</string>
    <string name="app_start">Começar</string>
    <string name="app_introduction_title_first">Olá,</string>
    <string name="app_introduction_title_second">Dinamismo, Significância e Inovação</string>
    <string name="app_introduction_title_third">Incentivo à Pesquisa Científica</string>
    <string name="app_introduction_title_fourth">Vamos lá!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
