<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground" tools:context=".SignupActivity">

    <TextView
        android:id="@+id/textViewSignUpName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/futura_light_bt"
        android:text="@string/app_username"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextSignUpName"
        app:layout_constraintStart_toStartOf="@+id/editTextSignUpName"/>
    <EditText
        android:id="@+id/editTextSignUpName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/colorTextPrimary"
        android:ems="10" android:fontFamily="@font/futura_light_bt"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent" android:textColorHint="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/textViewSignUpEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/futura_light_bt"
        android:text="@string/app_email_address" android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/editTextSignUpEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpName"/>
    <EditText
        android:id="@+id/editTextSignUpEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/colorWhite" android:ems="10"
        android:fontFamily="@font/futura_light_bt"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorAccent" android:textColorHint="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textViewSignUpEmail"/>
    <TextView
        android:id="@+id/textViewSignUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/futura_light_bt"
        android:text="@string/app_password"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" app:layout_constraintStart_toStartOf="@+id/editTextSignUpPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpEmail"/>
    <EditText
        android:id="@+id/editTextSignUpPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:fontFamily="@font/futura_light_bt"
        android:inputType="textPassword" android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorTextPrimary" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUpPassword"/>
    <TextView
        android:id="@+id/textViewSignUpConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/futura_light_bt"
        android:text="@string/app_confirm_password" android:textColor="@color/colorWhite"
        android:textSize="18sp" app:layout_constraintStart_toStartOf="@+id/editTextSignUpConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpPassword"/>
    <EditText
        android:id="@+id/editTextSignUpConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10" android:fontFamily="@font/futura_light_bt"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUpConfirmPassword"/>
    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" android:layout_marginBottom="48dp"
        android:background="@drawable/custom_buttom_yellow_background" android:fontFamily="@font/futura_light_bt"
        android:onClick="onButtonSignUpClick" android:text="@string/app_signup"
        android:textAppearance="@style/AlertDialog.AppCompat.Light" android:textColor="@color/colorTextPrimary"
        android:textSize="24sp" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/textViewSignUpYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginTop="8dp"
        android:fontFamily="@font/futura_light_bt" android:text="@string/app_school_year"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp" app:layout_constraintStart_toStartOf="@+id/editTextSignUpConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpConfirmPassword"/>
    <Spinner
        android:id="@+id/spinnerSignUpYear"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:backgroundTint="@color/colorWhite"
        app:layout_constraintStart_toEndOf="@+id/textViewSignUpYear"
        app:layout_constraintTop_toTopOf="@+id/textViewSignUpYear"/>
</androidx.constraintlayout.widget.ConstraintLayout>