<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground" tools:context=".SigninActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="142dp"
        android:src="@drawable/icons8_microscope_splashscreen_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/futura_medium_bt"
        android:text="PARASITE"
        android:textColor="@color/colorWhite"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/combat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/futura_medium_bt"
        android:text="COMBAT"
        android:textColor="@color/colorWhite"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textViewSignInWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/futura_heavy"
        android:text="@string/app_welcome"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewSignInWelcomeSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/futura_medium_bt"
        android:text="@string/app_data_to_start"
        android:textColor="@color/colorTextPrimary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewSignInWelcome"
        app:layout_constraintStart_toStartOf="@+id/textViewSignInWelcome"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignInWelcome"/>

    <TextView
        android:id="@+id/textViewSignInEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/futura_light_bt"
        android:text="@string/app_email_address"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextSignInEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextSignInEmail" />
    <EditText
        style="@style/StyledTilEditText"

        android:id="@+id/editTextSignInEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="16dp"

        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:fontFamily="@font/futura_light_bt"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:textColor="#FFF"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewSignInPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/futura_light_bt"
        android:text="@string/app_password"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/editTextSignInPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignInEmail" />
    <EditText
        style="@style/StyledTilEditText"

        android:id="@+id/editTextSignInPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:fontFamily="@font/futura_light_bt"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:textColor="@color/colorWhite"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignInPassword"/>

    <TextView
        android:id="@+id/textViewSignInForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/futura_light_bt"
        android:text="@string/app_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:clickable="true"
        android:onClick="onButtonRecoverPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextSignInPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignInPassword"/>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/custom_buttom_yellow_background"
        android:fontFamily="@font/futura_light_bt"
        android:onClick="onButtonLogInClick"
        android:text="@string/common_signin_button_text"
        android:textAppearance="@style/AlertDialog.AppCompat.Light"
        android:textColor="#FFFFFF" android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignInForgot"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" android:layout_marginBottom="48dp"
        android:background="@drawable/custom_linear_layout_signup_background"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/textViewLogInRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp" android:layout_marginBottom="14dp"
            android:fontFamily="@font/futura_light_bt" android:text="@string/app_new_account"
            android:textColor="@color/colorTextPrimary" android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <Button
            android:id="@+id/buttonLogInRegister"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp" android:layout_marginBottom="12dp"
            android:background="@drawable/custom_button_signup_background" android:fontFamily="@font/futura_light_bt"
            android:onClick="onButtonLogInRegisterClick"
            android:text="@string/app_signup"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textViewLogInRegister"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBarSignIn"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSignIn"
        app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
        app:layout_constraintTop_toTopOf="@+id/buttonSignIn" />

<!-- ERROR MESSAGES -->
    <TextView
        android:id="@+id/textViewSignInInvalidEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/futura_medium_bt"
        android:text="Insira um endereço de e-mail válido."
        android:textColor="@color/colorRedError"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/editTextSignInEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignInEmail" />
    <TextView
        android:id="@+id/textViewSignInEmailNonexistent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/futura_medium_bt"
        android:text="Este e-mail não está cadastrado."
        android:textColor="@color/colorRedError"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/editTextSignInEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignInEmail" />
    <TextView
        android:id="@+id/textViewSignInWrongPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/futura_medium_bt"
        android:textSize="12sp"
        android:text="Senha incorreta."
        android:textColor="@color/colorRedError"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/editTextSignInPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignInPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>
